--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
-    "postinstall": "typings install",
+    "postinstall": "typings install"
   },
   "license": "ISC",
   "dependencies": {
